--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,14 +1,17 @@
-.wrapper
-    header
-        h1 Mobile Opportunity Research
+h1 What
 
-        p this is just a body
-      
-        h3 Research goals
-        h3 Research plan
-        h3 Research Reports
+p This website documents the ongoing work by the Mobile Opportunity project team at Mozilla.
 
-section
-    h3 Intro
-    p this is a paragraph
-    p this is another
+p Over the course of next few months, we will be engaging in a multidisciplinary research project considering the potential opportunities for users and commercial actors if we can envision a mobile internet infrastructure which makes creation of mobile, locally relevant content easy and accessible.
+
+h1 Why
+
+p Web-enabled "smartphones" are increasingly going to be available for sale in emerging economies (thanks to both the lowering cost of these devices, the arrival of better telecommunication infrastructure). These phones are different than the phones that drove adoption in the richer markets, and there are many questions as to whether the models that have worked in e.g. Europe and North America will work, whether thinking about adoption patterns, usage patterns, demand and supply ecosystems, distribution and monetization models, etc.
+
+h1 How
+
+p Please see our public <a href="approach">approach</a> and <a href="plan">plan</a> to understand the process we will use for this project.
+
+h1 When
+
+p This project is starting in June 2014, and is expected to continue until at least November 2015, at which point we will perform a high-level assessment.
