--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -15,3 +15,7 @@ p Please see our public <a href="approach">approach</a> and <a href="plan">plan<
 h1 When
 
 p This project is starting in June 2014, and is expected to continue until at least November 2015, at which point we will perform a high-level assessment.
+
+h1 Who
+
+Hopefully many people will be involved.  The point of contact is David Ascher (da@mozillafoundation.org).
