add goals and get in touch

--- a/_website/index.jade
+++ b/_website/index.jade
@@ -13,7 +13,7 @@ p Web-enabled "smartphones" are increasingly going to be available for sale in e
 
 h1 How
 
-p Please see our public <a href="approach">approach</a> and <a href="plan">plan</a> to understand the process we will use for this project.
+p Please see our public <a href="goals">goals, <a href="approach">approach</a> and <a href="plan">plan</a> to understand the process we will use for this project.  We welcome contributions, so feel free to <a href="mailto:da@mozillafoundation.org">get in touch</a>.
 
 h1 When
 
