--- a/_website/_layout.jade
+++ b/_website/_layout.jade
@@ -1,6 +1,7 @@
 doctype
 html
   head
+  	title Mobile Opportunity Project
     if environment != "development"
         base(href="https://mozilla.github.io/mobile-opportunity/")
     else
