--- a/_website/plan.jade
+++ b/_website/plan.jade
@@ -10,7 +10,7 @@ p This is a living document.  Events in the past will be colored in <span class=
 
 h3 Project kick-off
 
-p.done The project needs formal approval by executive champions.
+p.done The project gets formal approval by executive champions.
 
 h3 Foundation Setting
 
