--- a/_website/index.jade
+++ b/_website/index.jade
@@ -1,8 +1,10 @@
 h1 What
 
-p This website documents the ongoing work by the Mobile Opportunity project team at Mozilla.
+p This website documents the ongoing work by the Mobile Opportunity project team at Mozilla, in partnership with GSMA.
 
-p Over the course of next few months, we will be engaging in a multidisciplinary research project considering the opportunities for both individuals and commercial actors of a mobile internet platform designed to allow non-programmers to easily create and distribute locally relevant mobile content.
+p This is a multidisciplinary research project studying technology and design approaches for greater participation in mobile digital life. 
+
+p We are especially interested in empowering new smartphone users to create and distribute locally relevant mobile apps. During 2014, this team will be studying motivations and constraints for creation creation in emerging digital economies, then prototyping and testing several software and teaching hypotheses in order to find solutions. We will present our findings at Mobile World Congress 2015.
 
 h1 Why
 
@@ -10,9 +12,21 @@ p
     a(href="http://www.flickr.com/photos/stuckincustoms/3011978673/")
         img(src="img/family_on_bike.jpg")
 
-p Web-enabled "smartphones" are increasingly going to be available for sale in emerging economies (thanks to both the lowering cost of these devices, the arrival of better telecommunication infrastructure). These phones are different than the phones that drove adoption in the richer markets, and there are many questions as to whether the models that have worked in e.g. Europe and North America will work, whether thinking about adoption patterns, usage patterns, demand and supply ecosystems, distribution and monetization models, etc.
+p Worldwide, sales of web-enabled "smartphones" have already surpassed feature phones. Low-cost smart devices, such as the Firefox OS / Spreadtrum device, are coming within reach for people at the bottom of the economic pyramid. And in 2017, active smartphone usage is predicted to surpass feature phone usage. 
 
-p While we can expect the existing models to be applied globally and have definite success (especially as they adapt to feedback), we believe it is worth seeking innovations in the field of app authoring and distribution models in particular. By working with communities engaged in Mozilla's learning and technology communities, testing our approaches in the field, and working with partners who share our interest in new models of local content creation, we hope to to facilitate the creation of content by non-traditional participants in the mobile content ecosystem.
+        img(src="img/delta.png")
+
+p For first-time smartphone buyers, apps and content are a killer feature. For network providers, they can drive subscriptions, data, and revenue from operator services. Yet a lack of skills and infrastructure means that there is latent, unmet demand for content that takes account of language, dialect and culture.
+ 
+p At the same time, we believe that the ability for individuals in a digital economy to add value to that digital economy will be essential for long-term, equitable  development. In some countries, such as Bangladesh, market forces alone are unlikely to lead to optimal outcomes. 
+
+p To close this “skills and content” gap, governments, NGOs and donors are inclined to invest in hubs, incubators, accelerators, and start-up garages that mirror assumptions about entrepreneurship from the experience of developed countries. Yet these models cannot kickstart digital economic development, or fill the content and skills gap, on their own. More ambitious, more scalable solutions will be required.
+ 
+p In this project we will seek greater insights on the following questions: What technology and practice innovations can we introduce to benefit both the content ecosystem and also global digital inclusion goals? How can we put the power to participate in the digital economy in more hands, in more places? How can we lower the bar to make and distribute local apps and content? How can we unleash entrepreneurial innovation, at massive scale, among mobile users who do not have access to bank officers, ATMs, or even a computer?
+
+p Adoption patterns, usage patterns, developer segmentation, distribution and monetization models will differ worlwide. While power laws, network effects, and other facts of nature will lead to some global constants—and some global technology norms—we believe that people who are only now coming online should have a stake in the development of their digital environment. 
+
+In this spirit, we seek innovations in the field of digital skills development, apps authoring and distribution models so that new web users can be "makers" and masters of their destiny. By working with communities engaged in Mozilla's learning and technology communities, testing our approaches in the field, and working with partners who share our interest in new models of local content creation, we hope to unlock value for all players, and more active stakeholders among the newest participants in the mobile content ecosystem.
 
 h1 How
 
@@ -20,10 +34,10 @@ p Please see our public <a href="goals">goals, <a href="approach">approach</a> a
 
 h1 When
 
-p This project is starting in June 2014, and is expected to continue until at least November 2015, at which point we will perform a high-level assessment about next steps.
+p This project is starting in June 2014, and is expected to continue until at least April 2015, at which point we will perform a high-level assessment about next steps.
 
 h1 Who
 
 p This is a Mozilla-led project involving a broad set of partners, including the <a href="http://www.gsma.com/">GSMA</a>.  
 
-The points of contact are David Ascher (<a href="mailto:da@mozillafoundation.org">da@mozillafoundation.org</a>) and Ben Moskowitz (<a href="mailto:ben@mozillafoundation.org">ben@mozillafoundation.org</a>).
+The points of contact are David Ascher (prototypes and engineering) (<a href="mailto:da@mozillafoundation.org">da@mozillafoundation.org</a>) and Ben Moskowitz (partnerships and plan) (<a href="mailto:ben@mozillafoundation.org">ben@mozillafoundation.org</a>).
